@@ -552,6 +552,10 @@ sub mapLookupCallback
     }    
 }
 
+sub activeMappingSessions
+{
+    return scalar( @mappingSessions );
+}
     
 # The target host is unreachable. We try to reach it few more times and
 # give it the final diagnose.
